# werewolf-backend

./: .env.example  Cargo.toml  populate_roles.sh  render.yaml  start.sh
src/: main.rs  routes.rs
src/configs/: config.rs
src/dto/: auth.rs  guest.rs  mod.rs  player.rs  role.rs  room.rs  user.rs
src/handlers/: auth.rs  guest.rs  mod.rs  role.rs  room.rs  user.rs  websocket.rs
src/middleware/: auth.rs
src/models/: guest.rs  mod.rs  player.rs  role.rs  room.rs  user.rs
src/state/: mod.rs
src/utils/: auth.rs  role.rs
src/websocket/: messages.rs  mod.rs  room.rs
