[package]
name = "werewolf-backend"
version = "0.1.0"
edition = "2024"

[dependencies]

argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["http2", "macros", "ws"] }
dotenvy = "0.15.7"
headers = "0.4.1"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
redis = { version = "0.32.6", features = ["connection-manager", "tokio-comp", "tls-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = "0.4.42"
async-trait = "0.1.89"
rand_core = { version = "0.6", features = ["getrandom"] }
futures = "0.3"
future-utils = "0.12.1"
rand = "0.9.2"
